# textual_review_app

./: README.md  ROADMAP.md  pyproject.toml
example/wksp/: config.toml  corpus.pattern.jsonl  patterns.txt
src/: search.py  serve.py
src/textual_review_app/: annotation_store.py  app.py  color.py  config.py  corpus.py
src/textual_review_app/css/: app.tcss
src/textual_review_app/widgets/: add_keyword_modal.py  goto_modal.py  highlighter_widget.py  info_modal.py  instruction_widget.py  mark_modal.py  metadata_modal.py  response_widget.py  search_modal.py  settings_modal.py  snippet_widget.py  toggle_button.py
tests/: conftest.py  test_annotations_selection.py  test_app_ui.py  test_comment_features.py  test_flags_toasts_settings.py  test_highlighting.py  test_last_saved_and_flag_button.py  test_navigation_and_persistence.py  test_reviewed_navigation_and_bindings.py  utils.py
